<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_large"
        android:textColor="@color/dark_blue"
        android:text="@string/server_client"
        android:padding="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_normal"
                android:textColor="@color/white"
                android:background="@color/dark_blue"
                android:id="@+id/tv_item_info"
                android:padding="10dp"
                android:text="@string/basic_info"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_info"
                android:orientation="vertical"
                android:padding="10dp">

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_normal"
                android:textColor="@color/white"
                android:background="@color/dark_blue"
                android:id="@+id/tv_item_details"
                android:padding="10dp"
                android:text="@string/pres_details"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ll_details"
                android:padding="10dp"
                >

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="50dp"
        android:id="@+id/ll"
        android:gravity="right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/txt_big"
            android:layout_marginRight="20dp"
            android:id="@+id/tv_total_amount"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/btn_right"
            android:background="@drawable/round_blue_bg"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/back"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
</LinearLayout>