<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yibao.hospitalapp.MainActivity"
    android:orientation="vertical"
    android:background="@mipmap/bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg_language">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese"
                android:button="@null"
                android:textColor="@color/home_radio_button_text_color"
                android:textSize="@dimen/txt_middle"
                android:layout_margin="10dp"
                android:id="@+id/rb_chinese"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:button="@null"
                android:textColor="@color/home_radio_button_text_color"
                android:textSize="@dimen/txt_middle"
                android:layout_margin="10dp"
                android:id="@+id/rb_english"/>
        </RadioGroup>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital_mode"
                android:button="@null"
                android:textColor="@color/home_radio_button_text_color"
                android:textSize="@dimen/txt_middle"
                android:layout_margin="10dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotl_mode"
                android:button="@null"
                android:textColor="@color/home_radio_button_text_color"
                android:textSize="@dimen/txt_middle"
                android:layout_margin="10dp"/>
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <EditText
            android:id="@+id/et_home_idnum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/pls_input_idnum"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:singleLine="true"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/txt_middle"/>

        <ImageButton
            android:id="@+id/ib_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:src="@mipmap/clear"
            android:padding="10dp"
            android:visibility="visible"
            android:scaleType="fitCenter"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/ib_search"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:src="@mipmap/search"
            android:visibility="visible"
           android:scaleType="fitCenter"
            android:padding="10dp"/>
    </LinearLayout>
    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:numColumns="4"
        android:id="@+id/gv_home_list"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="20dp"
        android:layout_marginTop="30dp">

    </GridView>

</LinearLayout>
